...
                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="V8l-8w-yLf">
                                <rect key="frame" x="0.0" y="466" width="320" height="72"/>
                                <subviews>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="eOc-O0-fBI">
                                        <rect key="frame" x="0.0" y="0.0" width="320" height="36"/>
                                        <fontDescription key="fontDescription" name="Raleway-Medium" family="Raleway Medium" pointSize="20"/>
                                        <state key="normal" title="LOGIN">
                                            <color key="titleColor" name="Medium"/>
                                        </state>
                                        <connections>
                                            <action selector="logIn:" destination="ztE-UI-nvD" eventType="touchUpInside" id="hDP-ue-u0b"/>
                                            <segue destination="6sm-hA-swY" kind="show" identifier="loginSegue" id="NYO-9o-OSn"/>
                                        </connections>
...
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="13" translatesAutoresizingMaskIntoConstraints="NO" id="f4U-pH-6is">
                                        <rect key="frame" x="0.0" y="37" width="220" height="30"/>
                                        <color key="textColor" name="Text"/>
                                        <fontDescription key="fontDescription" name="Raleway-Medium" family="Raleway Medium" pointSize="20"/>
                                        <textInputTraits key="textInputTraits"/>
                                    </textField>
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Password" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bet-n1-zVE">
                                        <rect key="frame" x="0.0" y="80.5" width="220" height="23.5"/>
                                        <fontDescription key="fontDescription" name="Raleway-Medium" family="Raleway Medium" pointSize="20"/>
                                        <color key="textColor" name="Medium"/>
                                        <nil key="highlightedColor"/>
                                    </label>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="13" translatesAutoresizingMaskIntoConstraints="NO" id="21L-hA-1jW">
...
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Email" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1Ab-hN-GZb">
                                        <rect key="frame" x="0.0" y="0.0" width="220" height="23.5"/>
                                        <fontDescription key="fontDescription" name="Raleway-Medium" family="Raleway Medium" pointSize="20"/>
                                        <color key="textColor" name="Medium"/>
                                        <nil key="highlightedColor"/>
                                    </label>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="13" translatesAutoresizingMaskIntoConstraints="NO" id="DtS-B7-Q6Q" userLabel="Username">
                                        <rect key="frame" x="0.0" y="41" width="220" height="30"/>
                                        <accessibility key="accessibilityConfiguration" label="Username"/>
                                        <color key="textColor" name="Text"/>
                                        <fontDescription key="fontDescription" name="Raleway-Medium" family="Raleway Medium" pointSize="20"/>
                                        <textInputTraits key="textInputTraits"/>
                                    </textField>
...
